# ndnx-trace

./: AUTHORS  INSTALL  README  config.h.in  configure.ac
source/: Makefile.am  conf.h  node_id.h  trace_client.c  trace_server.c
source/.deps/: trace_client.Po  trace_server.Po
